[gd_scene load_steps=11 format=2]

[ext_resource path="res://Images/bg_title.png" type="Texture" id=1]
[ext_resource path="res://Images/title_text.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Start.gd" type="Script" id=3]
[ext_resource path="res://Shaders/TransitionShader.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/Theme.tres" type="DynamicFont" id=5]

[sub_resource type="Theme" id=5]
default_font = ExtResource( 5 )

[sub_resource type="InputEventAction" id=6]
action = "ui_accept"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionShader:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionShader:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Start" type="Node"]
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Background"]
show_behind_parent = true
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="TextureRect" parent="."]
margin_left = 112.0
margin_top = 424.0
margin_right = 965.0
margin_bottom = 1277.0
texture = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
margin_top = 1167.0
margin_right = 1080.0
margin_bottom = 1287.0
theme = SubResource( 5 )
action_mode = 0
shortcut = SubResource( 7 )
text = "Play"
flat = true

[node name="TransitionPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="TransitionShader" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="animation_finished" from="TransitionPlayer" to="." method="_on_TransitionPlayer_animation_finished"]
